added container and footer sections

--- a/index.html
+++ b/index.html
@@ -6,13 +6,52 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- 1 added bootstrap and jquery (bottom) -->
     <title>Weather Dashboard</title>
 </head>
-<body">
-    <nav class="navbar navbar-dark bg-primary text-center">
+<body>
+    <!-- 2 created a nav bar for the title -->
+    <nav class="navbar navbar-dark bg-primary text-center p-3"> 
         <h1 class="text-light m-auto">Weather Dashboard</h1>
     </nav>
+    <!-- 3 created class container to use grid system -->
+    <main class="container p-3"> 
+        <div class="row">
+            <!-- 4 left side column will display cities -->
+            <div class="col-md-4">
+                <div class="row">
+                    <!-- 5 city section -->
+                    <div class="col-md-12 d-block"> 
+                        <label>Enter City name</label>
+                        <input type="text" id="city">
+                        <button class="btn btn-primary btn-blk">Search</button>
+                    </div>
+                    <!-- 6 previous search section -->
+                    <div class="row">
+                        <div class="col-md-12" id="previousSearch">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 7 right side column will display weather and details in two rows -->
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-12"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12"></div>
+                </div>
+            </div>
+        </div>
+    </main>
 
+    <!-- 8 added footer and classes-->
+    <footer class="bg-primary text-center text-white p-1 fixed-bottom">
+        <h6>&copy; Eugene Lee</h6>
+    </footer>
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html> 
