--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- create minimum HTML, work on functionality, finish styling -->
     <!-- 1 added bootstrap and jquery (bottom) -->
     <title>Weather Dashboard</title>
 </head>
@@ -24,7 +25,7 @@
                     <div class="col-md-12 d-block"> 
                         <label>Enter City name</label>
                         <input type="text" id="city">
-                        <button class="btn btn-primary btn-blk">Search</button>
+                        <button class="btn btn-primary btn-blk" id="searchBtn">Search</button>
                     </div>
                     <!-- 6 previous search section -->
                     <div class="row">
