--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!-- 7 right side column will display weather and details in two rows -->
             <div class="col-md-8">
                 <div class="row">
-                    <div class="col-md-12"></div>
+                    <div class="col-md-12" id="today"></div>
                 </div>
                 <div class="row">
                     <div class="col-md-12"></div>
