--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col-md-4">
                 <div class="row">
                     <!-- 5 city section -->
-                    <div class="col-md-12 d-block"> 
+                    <div class="col-md-12 d-grid"> 
                         <label>Enter City name</label>
                         <input type="text" id="city">
                         <button class="btn btn-primary btn-blk" id="searchBtn">Search</button>
@@ -40,8 +40,8 @@
                     <div class="col-md-12" id="today"></div>
                     <div id="uvi"></div>
                 </div>
-                <div class="row">
-                    <div class="col-md-12"></div>
+                <div class="row"> <!-- added styling to display in column -->
+                    <div class="col-md-12 d-flex flex-wrap" id="five-day"></div>
                 </div>
             </div>
         </div>
