--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <h1 class="text-light m-auto">Weather Dashboard</h1>
     </nav>
     <!-- 3 created class container to use grid system -->
-    <main class="container p-3"> 
+    <main class="container-fluid"> 
         <div class="row">
             <!-- 4 left side column will display cities -->
             <div class="col-md-4">
                 <div class="row">
                     <!-- 5 city section -->
-                    <div class="col-md-12 d-grid"> 
+                    <div class="col-md-12 d-grid form-inline mb-3"> 
                         <label>Enter City name</label>
-                        <input type="text" id="city">
-                        <button class="btn btn-primary btn-blk" id="searchBtn">Search</button>
+                        <input type="text" id="city" class="form-control">
+                        <button class="btn btn-primary btn-blk form-control" id="searchBtn">Search</button>
                     </div>
                     <!-- 6 previous search section -->
                     <div class="row">
@@ -48,7 +48,7 @@
     </main>
 
     <!-- 8 added footer and classes-->
-    <footer class="bg-primary text-center text-white p-1 fixed-bottom">
+    <footer class="bg-primary text-center text-white p-1 fixed-bottom padding-top 2">
         <h6>&copy; Eugene Lee</h6>
     </footer>
 
