updated styling and added units

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- 2 created a nav bar for the title -->
     <nav class="navbar navbar-dark bg-primary text-center p-3"> 
-        <h1 class="text-light m-auto">Weather Dashboard</h1>
+        <h1 class="text-white m-auto">Weather Dashboard</h1>
     </nav>
     <!-- 3 created class container to use grid system -->
     <main class="container-fluid"> 
